Upgrading Axon to 4.0.1 - Applying fix for 'message serialization' bug
https://github.com/AxonFramework/AxonFramework/issues/859

--- a/drestaurant-apps/drestaurant-microservices-rest/drestaurant-microservices-rest-courier/pom.xml
+++ b/drestaurant-apps/drestaurant-microservices-rest/drestaurant-microservices-rest-courier/pom.xml
@@ -86,10 +86,22 @@
         <dependency>
             <groupId>org.axonframework.extensions.amqp</groupId>
             <artifactId>axon-amqp-spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.axonframework</groupId>
+                    <artifactId>axon-messaging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.axonframework.extensions.springcloud</groupId>
             <artifactId>axon-springcloud-spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.axonframework</groupId>
+                    <artifactId>axon-messaging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.pivotal.spring.cloud</groupId>
