--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <axon.version>4.0</axon.version>
+        <axon.version>4.0.1</axon.version>
+        <axon.extension-kafka.version>4.0</axon.extension-kafka.version>
+        <axon.extension-amqp.version>4.0</axon.extension-amqp.version>
+        <axon.extension-spring-cloud.version>4.0</axon.extension-spring-cloud.version>
         <docker.image.prefix>idugalic</docker.image.prefix>
         <docker.plugin.version>0.4.9</docker.plugin.version>
         <project.scm.id>mygit</project.scm.id>
@@ -39,7 +42,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
-                <version>2.0.0.RELEASE</version>
+                <version>2.0.4.RELEASE</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -60,17 +63,17 @@
             <dependency>
                 <groupId>org.axonframework.extensions.amqp</groupId>
                 <artifactId>axon-amqp-spring-boot-starter</artifactId>
-                <version>${axon.version}</version>
+                <version>${axon.extension-amqp.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.axonframework.extensions.kafka</groupId>
                 <artifactId>axon-kafka-spring-boot-starter</artifactId>
-                <version>${axon.version}</version>
+                <version>${axon.extension-kafka.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.axonframework.extensions.springcloud</groupId>
                 <artifactId>axon-springcloud-spring-boot-starter</artifactId>
-                <version>${axon.version}</version>
+                <version>${axon.extension-spring-cloud.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.axonframework</groupId>
@@ -131,7 +134,6 @@
                 <scope>test</scope>
             </dependency>
         </dependencies>
-
     </dependencyManagement>
 
 
@@ -249,21 +251,6 @@
                 </executions>
             </plugin>
         </plugins>
-
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>idugalic-releases</id>
-            <name>idugalic-releases</name>
-            <url>http://maven.idugalic.pro/artifactory/local-drestaurant-release-repository</url>
-        </repository>
-        <snapshotRepository>
-            <id>idugalic-snapshots</id>
-            <name>idugalic-snapshots</name>
-            <url>http://maven.idugalic.pro/artifactory/local-drestaurant-repository</url>
-        </snapshotRepository>
-    </distributionManagement>
-
 
 </project>
