--- a/drestaurant-apps/drestaurant-microservices-rest-2/drestaurant-microservices-rest-2-common/pom.xml
+++ b/drestaurant-apps/drestaurant-microservices-rest-2/drestaurant-microservices-rest-2-common/pom.xml
@@ -16,15 +16,28 @@
     </parent>
 
     <dependencies>
+        <!-- drestaurant -->
+        <dependency>
+            <groupId>com.drestaurant</groupId>
+            <artifactId>drestaurant-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Axon -->
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- Commons -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.drestaurant</groupId>
-            <artifactId>drestaurant-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+        <!-- Kotlin -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -37,15 +50,6 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.axonframework</groupId>
-            <artifactId>axon-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.axonframework</groupId>
-            <artifactId>axon-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
