--- a/drestaurant-libs/drestaurant-order/pom.xml
+++ b/drestaurant-libs/drestaurant-order/pom.xml
@@ -16,6 +16,13 @@
     </parent>
 
     <dependencies>
+        <!-- drestaurant -->
+        <dependency>
+            <groupId>com.drestaurant</groupId>
+            <artifactId>drestaurant-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Axon -->
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-starter</artifactId>
@@ -25,6 +32,7 @@
             <artifactId>axon-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -34,11 +42,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.drestaurant</groupId>
-            <artifactId>drestaurant-core-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+        <!-- Kotlin -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -48,6 +52,7 @@
             <artifactId>kotlin-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- ArchUnit -->
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit4</artifactId>
