--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <axon.version>4.0.1</axon.version>
-        <axon.extension-kafka.version>4.0</axon.extension-kafka.version>
-        <axon.extension-amqp.version>4.0</axon.extension-amqp.version>
-        <axon.extension-spring-cloud.version>4.0</axon.extension-spring-cloud.version>
-        <docker.image.prefix>idugalic</docker.image.prefix>
-        <docker.plugin.version>0.4.9</docker.plugin.version>
-        <project.scm.id>mygit</project.scm.id>
+        <axon-extension.version>4.0</axon-extension.version>
         <kotlin.version>1.3.0</kotlin.version>
         <kafka.clients.version>0.11.0.2</kafka.clients.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
@@ -39,6 +34,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Spring framework -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
@@ -49,64 +45,6 @@
                 <groupId>org.springframework.security.oauth.boot</groupId>
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
                 <version>2.0.1.BUILD-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>2.6</version>
-            </dependency>
-            <dependency>
-                <groupId>org.axonframework</groupId>
-                <artifactId>axon-spring-boot-starter</artifactId>
-                <version>${axon.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.axonframework.extensions.amqp</groupId>
-                <artifactId>axon-amqp-spring-boot-starter</artifactId>
-                <version>${axon.extension-amqp.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.axonframework.extensions.kafka</groupId>
-                <artifactId>axon-kafka-spring-boot-starter</artifactId>
-                <version>${axon.extension-kafka.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.axonframework.extensions.springcloud</groupId>
-                <artifactId>axon-springcloud-spring-boot-starter</artifactId>
-                <version>${axon.extension-spring-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.axonframework</groupId>
-                <artifactId>axon-test</artifactId>
-                <version>${axon.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-                <scope>runtime</scope>
-                <version>2.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>joda-time</groupId>
-                <artifactId>joda-time</artifactId>
-                <version>2.9.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-stdlib-jdk8</artifactId>
-                <version>${kotlin.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-test</artifactId>
-                <version>${kotlin.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.axoniq</groupId>
-                <artifactId>axonhub-spring-boot-autoconfigure</artifactId>
-                <version>1.1</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -122,11 +60,83 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- Axon framework -->
             <dependency>
-                <groupId>org.axonframework.extensions.jgroups</groupId>
-                <artifactId>axon-jgroups-spring-boot-starter</artifactId>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-spring-boot-starter</artifactId>
                 <version>${axon.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-test</artifactId>
+                <version>${axon.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework.extensions.amqp</groupId>
+                <artifactId>axon-amqp-spring-boot-starter</artifactId>
+                <version>${axon-extension.version}</version>
+                <!-- We choose to use axon-messaging version from the axon-spring-boot-starter -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.axonframework</groupId>
+                        <artifactId>axon-messaging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework.extensions.kafka</groupId>
+                <artifactId>axon-kafka-spring-boot-starter</artifactId>
+                <version>${axon-extension.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.axonframework</groupId>
+                        <artifactId>axon-messaging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework.extensions.springcloud</groupId>
+                <artifactId>axon-springcloud-spring-boot-starter</artifactId>
+                <version>${axon-extension.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.axonframework</groupId>
+                        <artifactId>axon-messaging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!-- SQL -->
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <scope>runtime</scope>
+                <version>2.0.0</version>
+            </dependency>
+            <!-- Other libs -->
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.4</version>
+            </dependency>
+            <!-- Kotlin -->
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-test</artifactId>
+                <version>${kotlin.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!--AchUnit lib-->
             <dependency>
                 <groupId>com.tngtech.archunit</groupId>
                 <artifactId>archunit-junit4</artifactId>
@@ -168,16 +178,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>${docker.plugin.version}</version>
-                <configuration>
-                    <skipDockerBuild>true</skipDockerBuild>
-                    <serverId>docker-hub</serverId>
-                    <registryUrl>https://registry.hub.docker.com/v1/</registryUrl>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
@@ -202,7 +202,6 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
-
                 <executions>
                     <execution>
                         <id>compile</id>
