--- a/drestaurant-libs/drestaurant-courier/pom.xml
+++ b/drestaurant-libs/drestaurant-courier/pom.xml
@@ -58,5 +58,14 @@
             <artifactId>archunit-junit4</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Structurizr - document and visualize your architecture -->
+        <dependency>
+            <groupId>cc.catalysts.structurizr</groupId>
+            <artifactId>structurizr-spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cc.catalysts.structurizr</groupId>
+            <artifactId>structurizr-kotlin</artifactId>
+        </dependency>
     </dependencies>
 </project>
