--- a/drestaurant-apps/drestaurant-monolith/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-monolith/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+structurizr:
+  workspace:
+    id: 11111
+    name: DRestaurnat - Monolith
+    description: This is a sample workspace of digital restaurant - monolith
+    key: YOUR_KEY
+    secret: YOUR_SECRET
+  #   Whether to put the workspace to the structurizr server after the model has been fully initialized.
+  performMerge: false
 spring:
   data:
     rest:
