--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,22 @@
                 <version>0.9.2</version>
                 <scope>test</scope>
             </dependency>
+            <!-- Structurizr - document and visualize your architecture -->
+            <dependency>
+                <groupId>cc.catalysts.structurizr</groupId>
+                <artifactId>structurizr-spring-boot</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>cc.catalysts.structurizr</groupId>
+                <artifactId>structurizr-kotlin</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.structurizr</groupId>
+                <artifactId>structurizr-plantuml</artifactId>
+                <version>1.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
