--- a/drestaurant-apps/drestaurant-microservices-rest/drestaurant-microservices-rest-courier/src/main/resources/application.yml
+++ b/drestaurant-apps/drestaurant-microservices-rest/drestaurant-microservices-rest-courier/src/main/resources/application.yml
@@ -33,7 +33,7 @@ axon:
     processors:
       courierordersaga:
         mode: subscribing
-        source: amqpMessageSource
+#        source: amqpMessageSource
 
 
 
